--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<div class="w-100">
 			<div class="row">
 				<div class="col-12 earn_money players_recharge_mb">
-					<div class="w-100 bordercl bordercl_new">
+					<div class="w-100 bordercl bordercl_new banner_slide_bg">
             <div class="w-100 banner_slide owl-carousel owl-theme">
               <div class="item">
             <div class="row">
