--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
   </div>
   </div>
   <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-  	<div class="w-100 tab-border addtab" style="padding:15px 10px;">
+  	<div class="w-100 tab-border addtab" style="padding:15px 10px;min-height: 476px;">
   		<ul class="nav nav-tabs" id="myTab" role="tablist" style="border:0;">
   <li class="nav-item" role="presentation">
     <button class="nav-link active" id="invitation-tab" data-bs-toggle="tab" data-bs-target="#invitation" type="button" role="tab" aria-controls="home" aria-selected="true">Invitation players:0</button>
@@ -268,7 +268,7 @@
     <button class="nav-link" id="affiliated-tab" data-bs-toggle="tab" data-bs-target="#affiliated" type="button" role="tab" aria-controls="profile" aria-selected="false">Affiliated players:0</button>
   </li>
 </ul>
-<div class="tab-content" id="myTabContent">
+<div class="tab-content reward_table" id="myTabContent">
   
   <div class="tab-pane fade show active" id="invitation" role="tabpanel" aria-labelledby="invitation-tab">
   	<table class="w-100 friend_data table table-bordered">
